--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         const serviceConfig = {
             'fivem': {
                 name: 'FiveM Server',
-                url: '148.113.43.219:30120', // e.g., '192.168.1.100:30120'
+                url: 'http://148.113.43.219:30120', // e.g., '192.168.1.100:30120'
                 type: 'fivem'
             },
             'website': {
@@ -352,4 +352,5 @@
         startStatusMonitoring();
     </script>
 </body>
+
 </html>
